Fixed FineBugs warnings.